# taxonomy

./: .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE  index.slim  package-lock.json  package.json  versions.bzl  workspace.bzl
app/: BUILD.bazel  bootstrap.ts  dom_utils.ts  inaturalist_api.ts  inaturalist_row_formatter.ts  inaturalist_sync.ts  javascript.bzl  layout.slim  main.ts  row_formatter.ts  table_filter.ts  type_hints.ts
config/: BUILD.bazel  compilation_mode.bzl
data/: BUILD.bazel  alkalmazott_novenytan_eloadas_01.csv  alkalmazott_novenytan_eloadas_01.json  alkalmazott_novenytan_gyakorlat_01.csv  alkalmazott_novenytan_gyakorlat_01.json  alkalmazott_novenytan_jegyzet_1.csv  alkalmazott_novenytan_jegyzet_1.data.json  alkalmazott_novenytan_jegyzet_1.json  alkalmazott_novenytan_jegyzet_1.rows.json  alkalmazott_novenytan_jegyzet_2.csv  alkalmazott_novenytan_jegyzet_2.json  alkalmazott_novenytan_jegyzet_2.rows.json  kepes_zengolegyhatarozo.csv  kepes_zengolegyhatarozo.json  kepes_zengolegyhatarozo.rows.json  magyarorszag_viragos_novenyei.csv  magyarorszag_viragos_novenyei.json  milyen_allatnyom_ez.csv  milyen_allatnyom_ez.json  milyen_allatnyom_ez.rows.json  milyen_eheto_vadnoveny_ez.csv  milyen_eheto_vadnoveny_ez.json  milyen_eheto_vadnoveny_ez.rows.json  milyen_pok_ez.csv  milyen_pok_ez.json  milyen_pok_ez.rows.json  milyen_rovar_ez.csv  milyen_rovar_ez.data.json  milyen_rovar_ez.json  milyen_rovar_ez.rows.json  the_corncrake.csv  the_corncrake.json  the_corncrake.rows.json
data/doi/10.24369/: eANP.2017.15.1.csv
data/google_books/: C6JZlAEACAAJ.csv
data/isbn/: 9786155178184.csv  9786155178184.json
data/issn/: 20613911.csv  20613911.json
docs/: app.mjs  index.html  layout.html
docs/data/: common_names.json  sources.json
docs/themes/: mdn-yari.css  mdn-yari.css.map
src/: main.rs  wikispecies.rs
themes/: BUILD.bazel  common_names.sass  mdn_yari_theme.sass  page_layout.sass  tooltip.sass
tools/: BUILD.bazel  slim_lib.bzl  source_csv.bzl  source_json_test.sh  source_repository.bzl
tools/csv_to_json/: BUILD.bazel  Cargo.toml
tools/csv_to_json/src/: main.rs
tools/source_json/: BUILD.bazel  Cargo.toml
tools/source_json/src/: main.rs
