[package]
name = "taxonomy"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
futures = "0.3.21"
lazy_static = "1.4.0"
regex = "1.5.6"
reqwest = { version = "0.11.10", features = ["json"] }
scraper = "0.13.0"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.18.2", features = ["rt", "rt-multi-thread", "macros"] }
