load("//tools:source_repository.bzl", "source_repository")

source_repository(
    name = "data",
    sources = [
        "milyen_rovar_ez",
        "kepes_zengolegyhatarozo",
        "alkalmazott_novenytan_jegyzet_1",
        "alkalmazott_novenytan_jegyzet_2",
    ],
    visibility = ["//:__pkg__"],
)
