load("//tools:source_repository.bzl", "source_repository")

source_repository(
    name = "data",
    sources = [
        "milyen_allatnyom_ez",
        "milyen_eheto_vadnoveny_ez",
        "milyen_pok_ez",
        "milyen_rovar_ez",
        "kepes_zengolegyhatarozo",
        "the_corncrake",
        "alkalmazott_novenytan_jegyzet_1",
        "alkalmazott_novenytan_jegyzet_2",
        "alkalmazott_novenytan_eloadas_01",
        "alkalmazott_novenytan_gyakorlat_01",
    ],
    visibility = ["//:__pkg__"],
)
