load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")


rust_binary(
    name = "source_json",
    aliases = aliases(),
    deps = all_crate_deps(
	normal = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    srcs = ["src/main.rs"],
    #deps = ["//hello_lib"],
)
